2004-12-18  Sergey V. Udaltsov  <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: reflect changes in libgswitchit

2004-12-16  Bastien Nocera  <hadess@hadess.net>

	* actions/acme-volume-alsa.c: (acme_volume_alsa_set_mute): mute
	properly when the system has hardware mute, patch from Pierre Ossman
	<drzeus-bugzilla@drzeus.cx> (Closes: #144489)

2004-11-30  Sebastien Bacher  <seb128@debian.org>

	* actions/acme-volume-gstreamer.c:
	(acme_volume_gstreamer_finalize), (acme_volume_gstreamer_set_mute),
	(acme_volume_gstreamer_get_mute),
	(acme_volume_gstreamer_get_volume),
	(acme_volume_gstreamer_set_volume),
	(acme_volume_gstreamer_close_real), (acme_volume_gstreamer_open),
	(acme_volume_gstreamer_close), (acme_volume_gstreamer_init):
	free the alsa device, after 4 seconds, with gstreamer too. 
	Patch from Arnaud Patard <Arnaud Patard> (Closes: #141793).

2004-11-30  Bastien Nocera  <hadess@hadess.net>

	* gnome-settings-multimedia-keys.c: (do_exit_action): hack
	to get the logout action working (Closes: #141472)

2004-11-27  Sergey V. Udaltsov  <svu@gnome.org>

	* gnome-settings-keyboard-xkb.c: support for xmodmap introduced

2004-10-28  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-settings-xrdb.c: (append_xresource_file), (apply_settings):
	Don't nuke .Xdefaults when restarting g-s-d. Patch from Nick
	Welch <mack at incise org>. Closes bug #127050.

2004-10-21  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-default-editor.c: (vfs_change_cb):
	* gnome-settings-font.c: (load_cursor):
	* gnome-settings-gtk1theme.c: (apply_settings):
	* gnome-settings-keyboard.c: (apply_settings):
	* gnome-settings-multimedia-keys.c: (init_kbd):
	* gnome-settings-xsettings.c: (gnome_settings_xsettings_load):
	patch by Thomas Cataldo <thomas.cataldo@aliacom.fr> to fix a bunch of 
	memory leaks (Closes: #150145).

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-09-29  Bastien Nocera  <hadess@hadess.net>
